[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-scheduling-env"
version = "2.0"
description = "Healthcare Appointment Scheduling RL Environment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AnshikaP", email = "anshika@example.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/ANSHI2000/my-openenv"
Repository = "https://github.com/ANSHI2000/my-openenv"

[tool.setuptools]
packages = ["env"]
